--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
     "axios": "^1.2.2",
-    "react": "^16.0.0",
+    "dotenv": "^16.0.3",
+    "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
