--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/.backend/node_modules
 /.pnp
 .pnp.js
 
@@ -17,6 +18,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+/.backend/config.env
 
 npm-debug.log*
 yarn-debug.log*
