environment variables setting

--- a/backend/config.env
+++ b/backend/config.env
@@ -1,3 +1,2 @@
-ATLAS_URI=mongodb+srv://alon3011:301828349@cluster0.wvjidrw.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://holon-user:fgghjkl12@cluster0.wvjidrw.mongodb.net/?retryWrites=true&w=majority
 PORT=8080
-ACCESS_PASSWORD=popo
