--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.0.4",
     "@testing-library/user-event": "^12.0.9",
     "axios": "^1.2.2",
+    "concurrently": "^7.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.0.0",
@@ -23,7 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "react-start": "react-scripts start",
+    "express-start": "nodemon backend/server.js",
+    "start": "concurrently \"npm run react-start\" \"npm run express-start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
