--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-ATLAS_URI=mongodb://holon-user:yne3011@cluster0.wvjidrw.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://holon-user:yne3011@cluster0.wvjidrw.mongodb.net/?retryWrites=true&w=majority
 PORT=8080
 NODE_ENV = development
