--- a/vercel.json
+++ b/vercel.json
@@ -2,35 +2,11 @@
   "version": 2,
 
   "builds": [
-    { "src": "api/server.js", "use": "@vercel/node" },
+    { "src": "./api/server.js", "use": "@vercel/node" },
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "use": "@vercel/static-build"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "./api/server.js" }],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
-        }
-      ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "./api/server.js"
-    }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "./api/server.js" }]
 }
