change vercel.json try10- chatGPT solution

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,15 @@
   "version": 2,
 
   "builds": [
-    { "src": "./api/server.js", "use": "@vercel/node" },
+    { "src": "api/server.js", "use": "@vercel/node" },
     {
       "src": "package.json",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": { "distDir": "build" }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "./api/server.js" }]
+  "routes": [
+    { "src": "/api/(.*)", "dest": "api/server.js" },
+    { "src": "/(.*)", "dest": "build/index.html" }
+  ]
 }
