--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,11 @@
   "routes": [
     { "src": "/api/(.*)", "dest": "api/server.js" },
     { "src": "/(.*)", "dest": "build/index.html" }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "build/index.html"
+    }
   ]
 }
