--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.0.9",
     "axios": "^1.2.2",
     "concurrently": "^7.6.0",
+    "path": "^0.12.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.0.0",
