--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-
+  "buildCommand": [{ "src": "package.json", "use": "@now/static-build" }],
   "builds": [
     { "src": "api/server.js", "use": "@vercel/node" },
     {
