--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,6 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "api/server.js" },
-    { "src": "/.*", "dest": "build/index.html" }
+    { "src": "/src/(.*)", "dest": "build/index.html" }
   ]
 }
