issue connecting to routes try14

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,5 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "api/server.js" },
-    { "src": "/.*", "dest": "build/index.html" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "./api/server.js" }]
 }
