issue connecting to routes try18

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,8 @@
       "use": "@vercel/static"
     }
   ],
-  "rewrites": [{ "source": "/(.*)", "destination": "./api/server.js" }]
+  "routes": [
+    { "src": "/api/(.*)", "dest": "api/server.js" },
+    { "src": "/.*", "dest": "build/index.html" }
+  ]
 }
