--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
 
   "builds": [
-    { "src": "api/server.js", "use": "@vercel/node" },
+    { "src": "/api/server.js", "use": "@vercel/node" },
     {
       "src": "build",
       "use": "@vercel/static"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "api/server.js" },
-    { "src": "/.*", "dest": "build/index.html" }
+    { "src": "/api/(.*)", "dest": "/api/server.js" },
+    { "src": "/.*", "dest": "/api/server.js" }
   ]
 }
