--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/server.js" },
-    { "src": "/.*", "dest": "build/index.html" }
+    { "src": "/(.*)", "dest": "/api/server.js" },
+    { "src": "/(.*)", "dest": "/build/index.html" }
   ]
 }
