issue connecting to routes try23

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,5 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/server.js" },
-    { "src": "/(.*)", "dest": "/build/index.html" }
-  ]
+  "routes": [{ "src": "/.*", "dest": "/api/server.js" }]
 }
