--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,6 @@
 {
   "version": 2,
 
-  "builds": [
-    { "src": "api/server.js", "use": "@vercel/node" },
-    {
-      "src": "/build",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/server.js" },
-    { "src": "/.*", "dest": "/api/server.js" }
-  ]
+  "builds": [{ "src": "api/server.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/.*", "dest": "/api/server.js" }]
 }
