issue connecting to routes try26

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,16 @@
 {
   "version": 2,
 
-  "builds": [{ "src": "api/server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/.*", "dest": "/api/server.js" }]
+  "builds": [
+    { "src": "api/server.js", "use": "@vercel/node" },
+    {
+      "src": "packahe.json",
+      "use": "@vercel/static",
+      "config": { "distDir": "build" }
+    }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/server.js" },
+    { "src": "/.*", "dest": "/api/server.js" }
+  ]
 }
