--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "builds": [
     { "src": "api/server.js", "use": "@vercel/node" },
     {
-      "src": "packahe.json",
+      "src": "package.json",
       "use": "@vercel/static",
       "config": { "distDir": "build" }
     }
