--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,6 @@
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/server.js" },
-    { "src": "/.*", "dest": "/api/server.js" }
+    { "src": "/.*", "dest": "/build/index.html" }
   ]
 }
