--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,24 @@
     },
     { "src": "api/server.js", "use": "@vercel/node" }
   ],
-  "routes": [
+
+  "headers": [
     {
-      "src": "/(.*)",
-      "dest": "/build/index.html"
-    },
-    { "src": "/.*", "dest": "/api/server.js" }
+      "source": "/.*",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-Requested-With, Access-Control-Allow-Origin, X-HTTP-Method-Override, Content-Type, Authorization, Accept"
+        },
+        {
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        }
+      ]
+    }
   ]
 }
