error 500 on vercel try8

--- a/vercel.json
+++ b/vercel.json
@@ -9,24 +9,11 @@
     },
     { "src": "api/server.js", "use": "@vercel/node" }
   ],
-
-  "headers": [
+  "routes": [
     {
-      "source": "/.*",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With, Access-Control-Allow-Origin, X-HTTP-Method-Override, Content-Type, Authorization, Accept"
-        },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        }
-      ]
-    }
+      "src": "/(.*)",
+      "dest": "/build/index.html"
+    },
+    { "src": "/.*", "dest": "/api/server.js" }
   ]
 }
