--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,17 @@
     },
     { "src": "api/server.js", "use": "@vercel/node" }
   ],
-  "routes": [
+  "headers": [
     {
-      "src": "/(.*)",
-      "dest": "/build/index.html"
-    },
-    { "src": "/.*", "dest": "/api/server.js" }
+      "source": "/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Headers", "value": "Content-Type" },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE"
+        }
+      ]
+    }
   ]
 }
