CORS problem- test handle cors4

--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,6 @@
       "src": "/contacts/(.*)",
       "dest": "/api/server.js"
     },
-    { "src": "/.*", "dest": "/api/server.js" }
+    { "src": "/.*", "dest": "/build/index.html" }
   ]
 }
