--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,8 @@
     { "src": "api/server.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/server.js" },
+    { "src": "/contacts/(.*)", "dest": "/api/server.js" },
 
-    { "src": "/.*", "dest": "/build/index.html" }
+    { "src": "/.*", "dest": "/api/server.js" }
   ]
 }
