refresh error try5

--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,9 @@
   "routes": [
     {
       "src": "/contacts",
-      "handle": "/api/server.js"
+      "dest": "/api/server.js"
     },
 
-    { "src": "/.*", "dest": "/build/index.html" }
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
