--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/contacts",
-      "dest": "/api/server.js"
+      "dest": "/"
     },
 
     { "src": "/.*", "dest": "build/index.html" }
