refresh error try13

--- a/vercel.json
+++ b/vercel.json
@@ -10,12 +10,10 @@
     { "src": "api/server.js", "use": "@vercel/node" }
   ],
   "routes": [
+    { "src": "/.*", "dest": "build/index.html" },
     {
       "src": "/contacts",
       "dest": "/api/server.js"
-    },
-
-    { "src": "/.*", "dest": "build/index.html" }
-  ],
-  "fallback": "/build/index.html"
+    }
+  ]
 }
