--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "phonebook",
+  "homepage": "https://phonebook-holon.vercel.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
