fix connection to express 6

--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,6 @@
 {
   "name": "backend",
+  "homepage": "https://phonebook-holon.vercel.app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
