--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,9 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/server.js"
+      "dest": "api/server.js"
     },
 
-    { "src": "/.*", "dest": "/public/index.html" }
+    { "src": "/.*", "dest": "public/index.html" }
   ]
 }
