refresh try after spliting 4

--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,10 @@
     },
     { "src": "api/server.js", "use": "@vercel/node" }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/server.js"
-    },
-
-    { "src": "/.*", "dest": "public/index.html" }
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
