refresh try after spliting 7

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "dest": "build/index.html"
+      "destination": "build/index.html"
     }
   ]
 }
