--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "build/index.html"
+      "destination": "/"
     }
   ]
 }
