--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
   ],
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "api/server.js"
+    },
+    {
       "source": "/(.*)",
       "destination": "build/index.html"
     }
