--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,12 @@
   ],
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "/api/server.js"
+    },
+    {
       "source": "/(.*)",
-      "destination": "/"
+      "destination": "/build/index.html"
     }
   ]
 }
