--- a/vercel.json
+++ b/vercel.json
@@ -12,11 +12,11 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/server.js"
+      "destination": "api/server.js"
     },
     {
       "source": "/(.*)",
-      "destination": "/build/index.html"
+      "destination": "build/index.html"
     }
   ]
 }
