--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 
 # dependencies
 /node_modules
-/.backend/node_modules
+/api/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
-/.backend/seeds/initialContacts.js
+/api/seeds/initialContacts.js
 
 # production
 /build
@@ -20,7 +20,7 @@
 .env.test.local
 .env.production.local
 .env
-/.backend/config.env
+/api/config.env
 
 npm-debug.log*
 yarn-debug.log*
